--- a/abcmanual/abcmanual.tex
+++ b/abcmanual/abcmanual.tex
@@ -243,7 +243,7 @@ positioning,fit,calc,decorations.text,shadows%
 		Moreover, the beginnings of {\tt run.sh} scripts are in many cases exactly
 		like in {\tt run\_template.sh}. Thus this part can be directly imported by
 		\begin{center}
-			{\tt source abc\_run\_header.sh}
+			{\tt source run\_header.sh}
 		\end{center}
 		provided that the benchmark script directory is the {\tt PATH} variable.
 		This also defines the aliases
