--- a/abcmanual/abcmanual.tex
+++ b/abcmanual/abcmanual.tex
@@ -83,7 +83,7 @@ positioning,fit,calc,decorations.text,shadows%
 
 \begin{document}
 	
-	\title{The \abcs{} Benchmark System}
+	\title{The \abcs{} Benchmarking System}
 	\author{Christoph Redl}
 
 %	\maketitle
@@ -358,7 +358,7 @@ positioning,fit,calc,decorations.text,shadows%
 			\end{tikzpicture}
 		\endpgfgraphicnamed
 			
-		\caption{\abcs{} Benchmark System Architecture}
+		\caption{\abcs{} Benchmarking System Architecture}
 		\label{fig:architecture}
 		\end{figure}
 
