--- a/abcmanual/abcmanual.tex
+++ b/abcmanual/abcmanual.tex
@@ -96,7 +96,7 @@ positioning,fit,calc,decorations.text,shadows%
         {\bfseries\Huge The \abcs{} Benchmarking System} \\[1em]
         {\bfseries\Huge User Manual} \\
         \vskip3.0cm
-%        {\sc\Large INFSYS Research Report 1843-15-07} \\
+        {\sc\Large INFSYS Research Report 1843-16-01} \\
         \medskip
         {\Large \today}        
         \vskip2cm
