add output builder

--- a/abcmanual/abcmanual.tex
+++ b/abcmanual/abcmanual.tex
@@ -358,7 +358,7 @@ positioning,fit,calc,decorations.text,shadows%
 			\end{tikzpicture}
 		\endpgfgraphicnamed
 			
-		\caption{\abcs{} Benchmark System Architecture}
+		\caption{\abcs{} Benchmarking System Architecture}
 		\label{fig:architecture}
 		\end{figure}
 
